@@ -4,7 +4,7 @@
 <body>
 <a href ="NSNotificationCenter.html">[Previous]</a>
 <a href ="Base.html">[Up]</a>
-<a href ="NSNumber.html">[Next]</a>
+<a href ="NSNull.html">[Next]</a>
 <h1>NSNotificationQueue</h1>
 <h3>Authors </h3>
  <dl>
