@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE gsdoc PUBLIC "-//GNUstep//DTD gsdoc 0.6.6//EN" "http://www.gnustep.org/gsdoc-0_6_6.xml">
-<gsdoc base="NSNumber" prev="NSNotificationQueue" next="NSNumberFormatter" up="Base">
+<gsdoc base="NSNumber" prev="NSNull" next="NSNumberFormatter" up="Base">
   <head>
     <title>NSNumber</title>
     <author name="Richard Frith-Macdonald">
