@@ -2,7 +2,7 @@
  <title>NSNumber</title>
 </head>
 <body>
-<a href ="NSNotificationQueue.html">[Previous]</a>
+<a href ="NSNull.html">[Previous]</a>
 <a href ="Base.html">[Up]</a>
 <a href ="NSNumberFormatter.html">[Next]</a>
 <h1>NSNumber</h1>
